--- a/buyer.html
+++ b/buyer.html
@@ -153,7 +153,7 @@ border-radius:50%;
 <div class="container">
 
 <div class="header">
-<img src="HeaderLogo.png" class="logo">
+<img src="Headerlogo.png" class="logo">
 </div>
 
 <div id="filterBar" class="filter-bar">
