--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 
 <!-- Supabase CDN (ONLY ONCE) -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("sw.js");
+}
+</script>
+
 
 </head>
 
