--- a/buyer.html
+++ b/buyer.html
@@ -171,24 +171,28 @@ border-radius:50%;
 
 <div id="profile" class="section">
 
-    <h2>My Profile</h2>
-    <center>
-        <img id="avatar" class="avatar" src="https://ui-avatars.com/api/?name=Buyer&background=random">
-        <input type="file" accept="image/*" onchange="uploadAvatar(event)">
-    </center>
+ <span class="menu" onclick="toggleProfileMenu()">⋮</span>
+        <h2>My Profile</h2>
+        <center>
+            <img id="avatar" class="avatar" src="default-avatar.png">
+            <br><br>
+            <input type="file" onchange="uploadAvatar(event)">
+        </center>
+        <div id="profileInfo"></div>
+        
+        <h3>Delivery Address</h3>
+        <input id="addressInput" class="search" placeholder="Enter delivery address" style="margin-bottom:10px;">
+        <button class="btn" onclick="saveAddress()">Save Address with GPS</button>
+        <div id="addressList" style="margin-top:10px;"></div>
 
-    <input id="name" placeholder="Name">
-    <input id="phone" placeholder="Phone">
-    <button class="btn" onclick="saveProfile()">Save Profile</button>
+        <h3>My Orders</h3>
+        <div id="ordersList"></div>
 
-    <h3 style="margin-top: 30px;">My Address</h3>
-    <input id="addressInput" placeholder="Enter delivery address">
-    <button class="btn" onclick="saveAddress()">Save Address</button>
-    <div id="addressList" style="margin-top: 15px; color:#aaa;"></div>
-
-    <button class="btn" style="background:#444; margin-top: 30px;" onclick="logout()">Logout</button>
-
-</div>
+        <h3>Help & Support</h3>
+        <div>Email: support@petalrush.com</div>
+        <div>Phone: +91 9876543210</div>
+        <button class="btn" onclick="logout()" style="background:#333; margin-top:20px;">Logout</button>
+    </div>
 
 <div id="cart" class="section">
 
