--- a/buyer.html
+++ b/buyer.html
@@ -182,7 +182,7 @@ border-radius:50%;
         
         <h3>Delivery Address</h3>
         <input id="addressInput" class="search" placeholder="Enter delivery address" style="margin-bottom:10px;">
-        <button class="btn" onclick="saveAddress()">Save Address with GPS</button>
+        <button class="btn" onclick="saveAddress()">Save Address</button>
         <div id="addressList" style="margin-top:10px;"></div>
 
         <h3>My Orders</h3>
