--- a/buyer.html
+++ b/buyer.html
@@ -182,10 +182,11 @@ border-radius:50%;
     <input id="phone" placeholder="Phone">
     <button class="btn" onclick="saveProfile()">Save Profile</button>
         
-        <h3>Delivery Address</h3>
+       <h3>Delivery Address</h3>
         <input id="addressInput" class="search" placeholder="Enter delivery address" style="margin-bottom:10px;">
-        <button class="btn" onclick="saveAddress()">Save Address</button>
+        <button class="btn" onclick="saveAddress()">Save Address with GPS</button>
         <div id="addressList" style="margin-top:10px;"></div>
+
 
         <h3>My Orders</h3>
         <div id="ordersList"></div>
