--- a/buyer.html
+++ b/buyer.html
@@ -4,575 +4,49 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>PetalRush Buyer</title>
 
+<link rel="stylesheet" href="buyer.css">
+
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
-<style>
-
-body{
-margin:0;
-background:#0f1115;
-color:white;
-font-family:system-ui;
-}
-
-.container{
-max-width:500px;
-margin:auto;
-min-height:100vh;
-padding-bottom:80px;
-}
-
-.header{
-background:#111;
-padding:15px;
-text-align:center;
-}
-
-.logo{
-height:50px;
-}
-
-.filter-bar{
-padding:10px;
-background:#111;
-display:flex;
-gap:10px;
-position:sticky;
-top:0;
-}
-
-.search{
-flex:1;
-padding:10px;
-border-radius:8px;
-border:none;
-background:#222;
-color:white;
-}
-
-select{
-padding:10px;
-background:#222;
-color:white;
-border:none;
-border-radius:8px;
-}
-
-.products{
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
-gap:12px;
-padding:12px;
-}
-
-.card{
-background:#171a21;
-padding:10px;
-border-radius:12px;
-cursor:pointer;
-}
-
-.card img{
-width:100%;
-height:130px;
-object-fit:cover;
-border-radius:8px;
-}
-
-.price{
-color:#ff4081;
-font-weight:bold;
-}
-
-.section{
-display:none;
-padding:12px;
-}
-
-.bottom{
-position:fixed;
-bottom:0;
-width:100%;
-max-width:500px;
-display:flex;
-background:#111;
-}
-
-.bottom div{
-flex:1;
-text-align:center;
-padding:15px;
-cursor:pointer;
-}
-
-.btn{
-background:#ff4081;
-border:none;
-padding:12px;
-width:100%;
-border-radius:8px;
-color:white;
-margin-top:10px;
-cursor:pointer;
-}
-
-.cart-item{
-background:#171a21;
-padding:10px;
-margin-top:10px;
-border-radius:8px;
-display:flex;
-justify-content:space-between;
-}
-
-.qty-box{
-display:flex;
-gap:10px;
-margin:10px 0;
-}
-
-.qty-btn{
-background:#333;
-border:none;
-color:white;
-padding:5px 10px;
-cursor:pointer;
-}
-
-.avatar{
-width:100px;
-height:100px;
-border-radius:50%;
-}
-
-</style>
 </head>
 
 <body>
 
 <div class="container">
 
+<!-- HEADER -->
 <div class="header">
 <img src="Headerlogo.png" class="logo">
 </div>
 
+<!-- FILTER -->
 <div id="filterBar" class="filter-bar">
-<input id="search" class="search" placeholder="Search..." oninput="searchProducts()">
+
+<input id="search"
+class="search"
+placeholder="Search flowers..."
+oninput="searchProducts()">
+
 <select onchange="applyFilter(this.value)">
 <option value="new">Newest</option>
-<option value="low">Low → High</option>
-<option value="high">High → Low</option>
+<option value="low">Price Low → High</option>
+<option value="high">Price High → Low</option>
 </select>
+
 </div>
 
+<!-- HOME -->
 <div id="home" class="products"></div>
 
+<!-- DETAIL -->
 <div id="detail" class="section"></div>
 
+<!-- PROFILE -->
 <div id="profile" class="section">
 
- <span class="menu" onclick="toggleProfileMenu()">⋮</span>
-         <h2>My Profile</h2>
-    <center>
-        <img id="avatar" class="avatar" src="https://ui-avatars.com/api/?name=Buyer&background=random">
-        <input type="file" accept="image/*" onchange="uploadAvatar(event)">
-    </center>
+<h2>My Profile</h2>
 
-    <input id="name" placeholder="Name">
-    <input id="phone" placeholder="Phone">
-    <button class="btn" onclick="saveProfile()">Save Profile</button>
-        
-       <h3>Delivery Address</h3>
-        <input id="addressInput" class="search" placeholder="Enter delivery address" style="margin-bottom:10px;">
-        <button class="btn" onclick="saveAddress()">Save Address with GPS</button>
-        <div id="addressList" style="margin-top:10px;"></div>
+<center>
 
-
-        <h3>My Orders</h3>
-        <div id="ordersList"></div>
-
-        <h3>Help & Support</h3>
-        <div>Email: support@petalrush.com</div>
-        <div>Phone: +91 9876543210</div>
-        <button class="btn" onclick="logout()" style="background:#333; margin-top:20px;">Logout</button>
-    </div>
-
-<div id="cart" class="section">
-
-<h2>Cart</h2>
-
-<div id="cartItems"></div>
-
-<h3 id="total">Total ₹0</h3>
-
-<button class="btn" onclick="placeOrder()">Place Order</button>
-
-</div>
-
-<div class="bottom">
-<div onclick="showHome()">Home</div>
-<div onclick="showProfile()">Profile</div>
-<div onclick="showCart()">Cart</div>
-</div>
-
-</div>
-
-<script>
-
-const supabaseClient = window.supabase.createClient(
-"https://lssjsgfppehhclxqulso.supabase.co",
-"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imxzc2pzZ2ZwcGVoaGNseHF1bHNvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzExOTAwNzksImV4cCI6MjA4Njc2NjA3OX0.nRq1iFBiOEyty0ALRmS45ARoso7BsB0ENOvttu7nvX0"
-);
-
-let user = JSON.parse(localStorage.getItem("user"));
-
-if(!user){
-alert("Please login");
-location="index.html";
-}
-
-let currentProduct=null;
-let currentQty=1;
-
-/* UTIL */
-
-function hideAll(){
-
-document.getElementById("home").style.display="none";
-document.getElementById("detail").style.display="none";
-document.getElementById("profile").style.display="none";
-document.getElementById("cart").style.display="none";
-
-}
-
-/* HOME */
-
-async function showHome(){
-
-hideAll();
-
-const home=document.getElementById("home");
-home.style.display="grid";
-
-const {data,error}=await supabaseClient
-.from("products")
-.select("*");
-
-if(error){
-console.log(error);
-return;
-}
-
-renderProducts(data);
-
-}
-
-function renderProducts(data){
-
-const home=document.getElementById("home");
-
-home.innerHTML="";
-
-if(!data) return;
-
-data.forEach(p=>{
-
-home.innerHTML+=`
-<div class="card" onclick="showDetail('${p.id}')">
-<img src="${p.image_url || 'default-avatar.png'}">
-${p.name}
-<div class="price">₹${p.price}</div>
-</div>`;
-
-});
-
-}
-
-/* SEARCH */
-
-async function searchProducts(){
-
-const text=document.getElementById("search").value;
-
-const {data}=await supabaseClient
-.from("products")
-.select("*")
-.ilike("name","%"+text+"%");
-
-renderProducts(data);
-
-}
-
-/* FILTER */
-
-async function applyFilter(type){
-
-let query=supabaseClient.from("products").select("*");
-
-if(type=="low")
-query=query.order("price",{ascending:true});
-
-if(type=="high")
-query=query.order("price",{ascending:false});
-
-if(type=="new")
-query=query.order("created_at",{ascending:false});
-
-const {data}=await query;
-
-renderProducts(data);
-
-}
-
-/* DETAIL */
-
-async function showDetail(id){
-
-hideAll();
-
-const detail=document.getElementById("detail");
-
-detail.style.display="block";
-
-const {data}=await supabaseClient
-.from("products")
-.select("*")
-.eq("id",id)
-.single();
-
-currentProduct=data;
-currentQty=1;
-
-detail.innerHTML=`
-<img src="${data.image_url}" width="100%">
-<h2>${data.name}</h2>
-<div class="price">₹<span id="price">${data.price}</span></div>
-Stock: ${data.quantity}
-<div class="qty-box">
-<button class="qty-btn" onclick="changeQty(-1)">-</button>
-<span id="qty">1</span>
-<button class="qty-btn" onclick="changeQty(1)">+</button>
-</div>
-<button class="btn" onclick="addCart()">Add to Cart</button>
-<button class="btn" onclick="showHome()" style="background:#333;">Back</button>
-`;
-
-}
-
-/* QTY */
-
-function changeQty(val){
-
-currentQty+=val;
-
-if(currentQty<1) currentQty=1;
-
-if(currentQty>currentProduct.quantity){
-
-alert("Not enough stock");
-
-currentQty=currentProduct.quantity;
-
-}
-
-document.getElementById("qty").innerText=currentQty;
-document.getElementById("price").innerText=currentProduct.price*currentQty;
-
-}
-
-/* ADD CART */
-
-async function addCart(){
-
-const {error}=await supabaseClient.from("cart").insert({
-user_email:user.email,
-product_id:currentProduct.id,
-qty:currentQty
-});
-
-if(error) alert(error.message);
-else alert("Added to cart");
-
-}
-
-/* CART */
-
-async function showCart(){
-
-hideAll();
-
-document.getElementById("cart").style.display="block";
-
-const {data,error}=await supabaseClient
-.from("cart")
-.select("qty,products(name,price)")
-.eq("user_email",user.email);
-
-const cartItems=document.getElementById("cartItems");
-
-cartItems.innerHTML="";
-
-let total=0;
-
-if(data){
-
-data.forEach(item=>{
-
-if(item.products){
-
-let price=item.products.price*item.qty;
-
-total+=price;
-
-cartItems.innerHTML+=`
-<div class="cart-item">
-${item.products.name}
-₹${price}
-</div>`;
-
-}
-
-});
-
-}
-
-document.getElementById("total").innerText="Total ₹"+total;
-
-}
-
-/* PROFILE */
-
-async function showProfile(){
-
-hideAll();
-
-document.getElementById("profile").style.display="block";
-
-const {data}=await supabaseClient
-.from("users")
-.select("*")
-.eq("email",user.email)
-.single();
-
-if(data){
-
-if(data.avatar_url)
-document.getElementById("avatar").src=data.avatar_url;
-
-document.getElementById("profileInfo").innerHTML=
-`Name: ${data.name || ""}<br>Phone: ${data.phone || ""}`;
-
-}
-
-loadAddresses();
-loadOrders();
-
-}
-
-/* ADDRESS */
-
-async function saveAddress(){
-
-const addr=document.getElementById("addressInput").value;
-
-await supabaseClient.from("addresses").insert({
-user_email:user.email,
-address:addr
-});
-
-loadAddresses();
-
-}
-
-/* LOAD ADDRESS */
-
-async function loadAddresses(){
-
-const {data}=await supabaseClient
-.from("addresses")
-.select("*")
-.eq("user_email",user.email);
-
-const div=document.getElementById("addressList");
-
-div.innerHTML="";
-
-if(data){
-
-data.forEach(a=>{
-div.innerHTML+=`<div>${a.address}</div>`;
-});
-
-}
-
-}
-
-/* ORDERS */
-
-async function loadOrders(){
-
-const {data}=await supabaseClient
-.from("orders")
-.select("*")
-.eq("user_email",user.email);
-
-const div=document.getElementById("ordersList");
-
-div.innerHTML="";
-
-if(data){
-
-data.forEach(o=>{
-div.innerHTML+=`<div>${o.flower_name} ₹${o.price}</div>`;
-});
-
-}
-
-}
-
-/* AVATAR */
-
-async function uploadAvatar(e){
-
-const file=e.target.files[0];
-
-const name=user.email+".png";
-
-await supabaseClient.storage
-.from("avatars")
-.upload(name,file,{upsert:true});
-
-const url="https://lssjsgfppehhclxqulso.supabase.co/storage/v1/object/public/avatars/"+name;
-
-document.getElementById("avatar").src=url;
-
-await supabaseClient.from("users").upsert({
-email:user.email,
-avatar_url:url
-});
-
-}
-
-/* ORDER */
-
-function placeOrder(){
-alert("Order placed");
-}
-
-/* LOGOUT */
-
-function logout(){
-
-localStorage.removeItem("user");
-location="index.html";
-
-}
-
-/* START */
-
-showHome();
-
-</script>
-
-</body>
-</html>
+<img id="avatar"
+class="avatar"
+src
