--- a/buyer.html
+++ b/buyer.html
@@ -13,40 +13,65 @@
 
 <div class="container">
 
-<!-- HEADER -->
 <div class="header">
 <img src="Headerlogo.png" class="logo">
 </div>
 
-<!-- FILTER -->
 <div id="filterBar" class="filter-bar">
-
-<input id="search"
-class="search"
-placeholder="Search flowers..."
-oninput="searchProducts()">
-
+<input id="search" class="search" placeholder="Search..." oninput="searchProducts()">
 <select onchange="applyFilter(this.value)">
 <option value="new">Newest</option>
-<option value="low">Price Low → High</option>
-<option value="high">Price High → Low</option>
+<option value="low">Low → High</option>
+<option value="high">High → Low</option>
 </select>
-
 </div>
 
-<!-- HOME -->
 <div id="home" class="products"></div>
 
-<!-- DETAIL -->
 <div id="detail" class="section"></div>
 
-<!-- PROFILE -->
 <div id="profile" class="section">
-
 <h2>My Profile</h2>
 
 <center>
+<img id="avatar" class="avatar" src="default-avatar.png">
+<input type="file" accept="image/*" onchange="uploadAvatar(event)">
+</center>
 
-<img id="avatar"
-class="avatar"
-src
+<div id="profileInfo"></div>
+
+<h3>Delivery Address</h3>
+<input id="addressInput" class="search" placeholder="Enter delivery address">
+<button class="btn" onclick="saveAddress()">Save Address</button>
+
+<div id="addressList"></div>
+
+<h3>My Orders</h3>
+<div id="ordersList"></div>
+
+<h3>Help & Support</h3>
+<div>Email: support@petalrush.com</div>
+<div>Phone: +91 9876543210</div>
+
+<button class="btn logout" onclick="logout()">Logout</button>
+</div>
+
+<div id="cart" class="section">
+<h2>Cart</h2>
+<div id="cartItems"></div>
+<h3 id="total">Total ₹0</h3>
+<button class="btn" onclick="placeOrder()">Place Order</button>
+</div>
+
+<div class="bottom">
+<div onclick="showHome()">Home</div>
+<div onclick="showProfile()">Profile</div>
+<div onclick="showCart()">Cart</div>
+</div>
+
+</div>
+
+<script src="buyer.js"></script>
+
+</body>
+</html>
