--- a/buyer.html
+++ b/buyer.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <title>PetalRush Buyer</title>
 
 <link rel="stylesheet" href="buyer.css">
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
 </head>
 
 <body>
@@ -14,59 +17,114 @@
 <div class="container">
 
 <div class="header">
-<img src="Headerlogo.png" class="logo">
+<img src="HeaderLogo.png" class="logo">
 </div>
 
-<div id="filterBar" class="filter-bar">
-<input id="search" class="search" placeholder="Search..." oninput="searchProducts()">
+<div id="filterSection" class="filter-bar">
+
+<input id="search"
+class="search"
+placeholder="Search flowers"
+oninput="searchProducts()">
+
 <select onchange="applyFilter(this.value)">
+
 <option value="new">Newest</option>
-<option value="low">Low → High</option>
-<option value="high">High → Low</option>
+<option value="low">Price Low → High</option>
+<option value="high">Price High → Low</option>
+
 </select>
+
 </div>
+
 
 <div id="home" class="products"></div>
 
 <div id="detail" class="section"></div>
 
+
 <div id="profile" class="section">
+
+<span class="menu">⋮</span>
+
 <h2>My Profile</h2>
 
 <center>
-<img id="avatar" class="avatar" src="default-avatar.png">
-<input type="file" accept="image/*" onchange="uploadAvatar(event)">
+
+<img id="avatar"
+class="avatar"
+src="default-avatar.png">
+
+<br><br>
+
+<input type="file"
+onchange="uploadAvatar(event)">
+
 </center>
 
 <div id="profileInfo"></div>
 
+
 <h3>Delivery Address</h3>
-<input id="addressInput" class="search" placeholder="Enter delivery address">
-<button class="btn" onclick="saveAddress()">Save Address</button>
+
+<input id="addressInput"
+class="search"
+placeholder="Enter delivery address">
+
+<button class="btn"
+onclick="saveAddress()">
+Save Address with GPS
+</button>
 
 <div id="addressList"></div>
 
+
 <h3>My Orders</h3>
+
 <div id="ordersList"></div>
 
+
 <h3>Help & Support</h3>
+
 <div>Email: support@petalrush.com</div>
+
 <div>Phone: +91 9876543210</div>
 
-<button class="btn logout" onclick="logout()">Logout</button>
+
+<button class="btn logout"
+onclick="logout()">
+Logout
+</button>
+
 </div>
+
+
 
 <div id="cart" class="section">
+
 <h2>Cart</h2>
+
 <div id="cartItems"></div>
+
 <h3 id="total">Total ₹0</h3>
-<button class="btn" onclick="placeOrder()">Place Order</button>
+
+<button class="btn"
+onclick="placeOrder()">
+Place Order
+</button>
+
 </div>
 
+
+
 <div class="bottom">
+
 <div onclick="showHome()">Home</div>
+
 <div onclick="showProfile()">Profile</div>
+
 <div onclick="showCart()">Cart</div>
+
 </div>
 
 </div>
