--- a/buyer.html
+++ b/buyer.html
@@ -187,7 +187,7 @@ select{
 <div class="container">
 
     <div class="header">
-        <img src="HeaderLogo.png" class="logo" alt="PetalRush">
+        <img src="Headerlogo.png" class="logo" alt="PetalRush">
     </div>
 
     <div id="filterSection" class="filter-bar">
