--- a/buyer.html
+++ b/buyer.html
@@ -182,7 +182,7 @@ cursor:pointer;
 
 <input id="addressInput" class="search" placeholder="Enter address">
 
-<button class="btn" onclick="saveAddress()">Save Address with GPS</button>
+<button class="btn" onclick="saveAddress()">Save Address with</button>
 
 <div id="addressList"></div>
 
